parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> compUnit
Rule 1     empty -> <empty>
Rule 2     compUnit -> empty
Rule 3     compUnit -> compUnit compUnit
Rule 4     compUnit -> decl
Rule 5     compUnit -> cir_function
Rule 6     compUnit -> function
Rule 7     compUnit -> module
Rule 8     compUnit -> bundle
Rule 9     decl -> constDecl
Rule 10    decl -> varDecl
Rule 11    decl -> cirDecl
Rule 12    decl -> modDecl
Rule 13    decl -> bundleDecl
Rule 14    constDecl_repeat -> empty
Rule 15    constDecl_repeat -> , constDef constDecl_repeat
Rule 16    constDecl -> CONST val_type constDef constDecl_repeat ;
Rule 17    cir_basic_type -> REG
Rule 18    cir_basic_type -> WIRE
Rule 19    cir_basic_type -> CLOCK
Rule 20    cir_basic_type -> ID
Rule 21    cir_type -> cir_basic_type
Rule 22    cir_type -> cir_basic_type [ exp ]
Rule 23    val_type -> INT
Rule 24    val_type -> FLOAT
Rule 25    type_def -> val_type
Rule 26    type_def -> cir_type
Rule 27    array -> empty
Rule 28    array -> [ constExp ] array
Rule 29    constDef -> ID array ASSIGN constInitVal
Rule 30    constInitVal_repeat -> empty
Rule 31    constInitVal_repeat -> , constInitVal constInitVal_repeat
Rule 32    constInitVal -> constExp
Rule 33    constInitVal -> { constInitVal constInitVal_repeat }
Rule 34    varDef_repeat -> empty
Rule 35    varDef_repeat -> , varDef varDef_repeat
Rule 36    varDecl -> val_type varDef varDef_repeat ;
Rule 37    varDef -> ID array
Rule 38    varDef -> ID array ASSIGN initVal
Rule 39    modDecl -> ID ( module_R_params ) ID array ;
Rule 40    R_port_def -> IN .
Rule 41    R_port_def -> OUT .
Rule 42    R_port_def -> INOUT .
Rule 43    p_module_R_params_item -> R_port_def ID ( ID )
Rule 44    module_R_params_repeat -> empty
Rule 45    module_R_params_repeat -> , p_module_R_params_item module_R_params_repeat
Rule 46    module_R_params -> p_module_R_params_item module_R_params_repeat
Rule 47    bundleDecl_repeat -> empty
Rule 48    bundleDecl_repeat -> , bundleDef bundleDecl_repeat
Rule 49    bundleDecl -> ID bundleDef bundleDecl_repeat
Rule 50    bundleDef -> ID array
Rule 51    initVal_repeat -> empty
Rule 52    initVal_repeat -> , initVal initVal_repeat
Rule 53    initVal -> exp
Rule 54    initVal -> { initVal initVal_repeat }
Rule 55    cirDecl_repeat -> empty
Rule 56    cirDecl_repeat -> , cirDef cirDecl_repeat
Rule 57    cirDecl -> cir_type cirDef cirDecl_repeat ;
Rule 58    cirDef -> ID array
Rule 59    cirDef -> ID array ASSIGN initVal
Rule 60    cir_function -> cir_type ID ( cir_funcFParams ) block
Rule 61    function -> val_type ID ( funcFParams ) block
Rule 62    cir_funcFParams_repeat -> empty
Rule 63    cir_funcFParams_repeat -> , cir_funcFParam cir_funcFParams_repeat
Rule 64    cir_funcFParams -> cir_funcFParam cir_funcFParams_repeat
Rule 65    funcFParams_repeat -> empty
Rule 66    funcFParams_repeat -> , funcFParam funcFParams_repeat
Rule 67    funcFParams -> funcFParam funcFParams_repeat
Rule 68    cir_funcFParam -> type_def ID array
Rule 69    funcFParam -> val_type ID array
Rule 70    module_para_para -> empty
Rule 71    module_para_para -> PARA val_type ID ,
Rule 72    module_para_para -> PARA val_type ID , module_para_para
Rule 73    p_module_para_port -> empty
Rule 74    p_module_para_port -> , port_def ID p_module_para_port
Rule 75    module -> MODULE ID ( module_para_para port_def ID p_module_para_port ) block
Rule 76    bundle_repeat -> empty
Rule 77    bundle_repeat -> , cir_type ID bundle_repeat
Rule 78    bundle -> BUNDLE ID ( cir_type ID bundle_repeat )
Rule 79    block_repeat -> empty
Rule 80    block_repeat -> blockItem block_repeat
Rule 81    block -> { block_repeat }
Rule 82    blockItem -> decl
Rule 83    blockItem -> stmt
Rule 84    stmt -> lVal ASSIGN exp ;
Rule 85    stmt -> lVal CONNECT exp ;
Rule 86    stmt -> ;
Rule 87    stmt -> exp
Rule 88    stmt -> block
Rule 89    stmt -> seqLogStmt
Rule 90    stmt -> ifStmt
Rule 91    stmt -> forStmt
Rule 92    stmt -> RETURN exp ;
Rule 93    seqLogStmt -> WHEN ( ID ) stmt
Rule 94    seqLogStmt -> WHEN ( ID . RISING ) stmt
Rule 95    seqLogStmt -> WHEN ( ID . FALLING ) stmt
Rule 96    elifStmt -> ELIF ( exp ) stmt elifStmt
Rule 97    elifStmt -> empty
Rule 98    elseStmt -> ELSE stmt
Rule 99    elseStmt -> empty
Rule 100   ifStmt -> IF ( exp ) stmt elifStmt elseStmt
Rule 101   forStmt -> FOR ( varDecl exp ; stmt ) stmt
Rule 102   forStmt -> GENERATE FOR ( varDecl exp ; exp ) COLON ID stmt
Rule 103   exp -> lOrExp
Rule 104   lVal -> ID array_exp_repeat1
Rule 105   lVal -> ID array_exp_repeat2
Rule 106   lVal -> { ID array_exp_repeat1 lVal_repeat }
Rule 107   lVal -> { ID array_exp_repeat2 lVal_repeat }
Rule 108   lVal -> MUX ( exp , exp , exp )
Rule 109   lVal -> lVal . ID
Rule 110   primaryExp -> ( exp )
Rule 111   primaryExp -> lVal
Rule 112   primaryExp -> number
Rule 113   lVal_repeat -> empty
Rule 114   lVal_repeat -> , lVal lVal_repeat
Rule 115   array_exp_repeat1 -> empty
Rule 116   array_exp_repeat1 -> [ exp ] array_exp_repeat1
Rule 117   array_exp_repeat2 -> empty
Rule 118   array_exp_repeat2 -> [ exp COLON exp ] array_exp_repeat2
Rule 119   number -> INTEGER_CONST
Rule 120   number -> FLOAT_CONST
Rule 121   number -> circuit_const
Rule 122   circuit_const -> exp BIT_WIDTH_NUMBER
Rule 123   unaryExp -> primaryExp
Rule 124   unaryExp -> ID ( )
Rule 125   unaryExp -> ID ( funcRParams )
Rule 126   unaryExp -> SIGNAL ( unaryExp )
Rule 127   unaryExp -> unaryOp unaryExp
Rule 128   unaryOp -> ADD
Rule 129   unaryOp -> SUB
Rule 130   unaryOp -> NOT
Rule 131   unaryOp -> NOTL
Rule 132   exp_repeat -> empty
Rule 133   exp_repeat -> , exp exp_repeat
Rule 134   funcRParams -> exp
Rule 135   funcRParams -> exp exp_repeat
Rule 136   mulExp -> unaryExp
Rule 137   mulExp -> mulExp MUL unaryExp
Rule 138   mulExp -> mulExp DIV unaryExp
Rule 139   mulExp -> mulExp MOD unaryExp
Rule 140   mulExp -> mulExp POWER unaryExp
Rule 141   addExp -> mulExp
Rule 142   addExp -> addExp ADD mulExp
Rule 143   addExp -> addExp SUB mulExp
Rule 144   shiftExp -> addExp
Rule 145   shiftExp -> shiftExp SLL addExp
Rule 146   shiftExp -> shiftExp SRL addExp
Rule 147   shiftExp -> shiftExp SRA addExp
Rule 148   relExp -> shiftExp
Rule 149   relExp -> relExp LT addExp
Rule 150   relExp -> relExp GT addExp
Rule 151   relExp -> relExp GE addExp
Rule 152   relExp -> relExp LE addExp
Rule 153   eqExp -> relExp
Rule 154   eqExp -> eqExp EQUAL eqExp
Rule 155   eqExp -> eqExp NEQ eqExp
Rule 156   redExp -> eqExp
Rule 157   redExp -> AND eqExp
Rule 158   redExp -> OR eqExp
Rule 159   redExp -> NOT eqExp
Rule 160   redExp -> XOR eqExp
Rule 161   redExp -> XNOR eqExp
Rule 162   lAndExp -> redExp
Rule 163   lAndExp -> lAndExp LAND redExp
Rule 164   lOrExp -> lAndExp
Rule 165   lOrExp -> lOrExp LOR lAndExp
Rule 166   port_def -> INPUT cir_type
Rule 167   port_def -> OUTPUT cir_type
Rule 168   port_def -> INOUT cir_type
Rule 169   constExp -> exp

Terminals, with rules where they appear

(                    : 39 43 60 61 75 78 93 94 95 96 100 101 102 108 110 124 125 126
)                    : 39 43 60 61 75 78 93 94 95 96 100 101 102 108 110 124 125 126
,                    : 15 31 35 45 48 52 56 63 66 71 72 74 77 108 108 114 133
.                    : 40 41 42 94 95 109
;                    : 16 36 39 57 84 85 86 92 101 102
ADD                  : 128 142
AND                  : 157
ASSIGN               : 29 38 59 84
BIT_WIDTH_NUMBER     : 122
BUNDLE               : 78
CLOCK                : 19
COLON                : 102 118
CONNECT              : 85
CONST                : 16
DIV                  : 138
ELIF                 : 96
ELSE                 : 98
EQUAL                : 154
FALLING              : 95
FLOAT                : 24
FLOAT_CONST          : 120
FOR                  : 101 102
GE                   : 151
GENERATE             : 102
GT                   : 150
ID                   : 20 29 37 38 39 39 43 43 49 50 58 59 60 61 68 69 71 72 74 75 75 77 78 78 93 94 95 102 104 105 106 107 109 124 125
IF                   : 100
IN                   : 40
INOUT                : 42 168
INPUT                : 166
INT                  : 23
INTEGER_CONST        : 119
LAND                 : 163
LE                   : 152
LOR                  : 165
LT                   : 149
MOD                  : 139
MODULE               : 75
MUL                  : 137
MUX                  : 108
NEQ                  : 155
NOT                  : 130 159
NOTL                 : 131
OR                   : 158
OUT                  : 41
OUTPUT               : 167
PARA                 : 71 72
POWER                : 140
REG                  : 17
RETURN               : 92
RISING               : 94
SIGNAL               : 126
SLL                  : 145
SRA                  : 147
SRL                  : 146
SUB                  : 129 143
WHEN                 : 93 94 95
WIRE                 : 18
XNOR                 : 161
XOR                  : 160
[                    : 22 28 116 118
]                    : 22 28 116 118
error                : 
{                    : 33 54 81 106 107
}                    : 33 54 81 106 107

Nonterminals, with rules where they appear

R_port_def           : 43
addExp               : 142 143 144 145 146 147 149 150 151 152
array                : 28 29 37 38 39 50 58 59 68 69
array_exp_repeat1    : 104 106 116
array_exp_repeat2    : 105 107 118
block                : 60 61 75 88
blockItem            : 80
block_repeat         : 80 81
bundle               : 8
bundleDecl           : 13
bundleDecl_repeat    : 48 49
bundleDef            : 48 49
bundle_repeat        : 77 78
cirDecl              : 11
cirDecl_repeat       : 56 57
cirDef               : 56 57
cir_basic_type       : 21 22
cir_funcFParam       : 63 64
cir_funcFParams      : 60
cir_funcFParams_repeat : 63 64
cir_function         : 5
cir_type             : 26 57 60 77 78 166 167 168
circuit_const        : 121
compUnit             : 3 3 0
constDecl            : 9
constDecl_repeat     : 15 16
constDef             : 15 16
constExp             : 28 32
constInitVal         : 29 31 33
constInitVal_repeat  : 31 33
decl                 : 4 82
elifStmt             : 96 100
elseStmt             : 100
empty                : 2 14 27 30 34 44 47 51 55 62 65 70 73 76 79 97 99 113 115 117 132
eqExp                : 154 154 155 155 156 157 158 159 160 161
exp                  : 22 53 84 85 87 92 96 100 101 102 102 108 108 108 110 116 118 118 122 133 134 135 169
exp_repeat           : 133 135
forStmt              : 91
funcFParam           : 66 67
funcFParams          : 61
funcFParams_repeat   : 66 67
funcRParams          : 125
function             : 6
ifStmt               : 90
initVal              : 38 52 54 59
initVal_repeat       : 52 54
lAndExp              : 163 164 165
lOrExp               : 103 165
lVal                 : 84 85 109 111 114
lVal_repeat          : 106 107 114
modDecl              : 12
module               : 7
module_R_params      : 39
module_R_params_repeat : 45 46
module_para_para     : 72 75
mulExp               : 137 138 139 140 141 142 143
number               : 112
p_module_R_params_item : 45 46
p_module_para_port   : 74 75
port_def             : 74 75
primaryExp           : 123
redExp               : 162 163
relExp               : 149 150 151 152 153
seqLogStmt           : 89
shiftExp             : 145 146 147 148
stmt                 : 83 93 94 95 96 98 100 101 101 102
type_def             : 68
unaryExp             : 126 127 136 137 138 139 140
unaryOp              : 127
val_type             : 16 25 36 61 69 71 72
varDecl              : 10 101 102
varDef               : 35 36
varDef_repeat        : 35 36

Parsing method: LALR

state 0

    (0) S' -> . compUnit
    (2) compUnit -> . empty
    (3) compUnit -> . compUnit compUnit
    (4) compUnit -> . decl
    (5) compUnit -> . cir_function
    (6) compUnit -> . function
    (7) compUnit -> . module
    (8) compUnit -> . bundle
    (1) empty -> .
    (9) decl -> . constDecl
    (10) decl -> . varDecl
    (11) decl -> . cirDecl
    (12) decl -> . modDecl
    (13) decl -> . bundleDecl
    (60) cir_function -> . cir_type ID ( cir_funcFParams ) block
    (61) function -> . val_type ID ( funcFParams ) block
    (75) module -> . MODULE ID ( module_para_para port_def ID p_module_para_port ) block
    (78) bundle -> . BUNDLE ID ( cir_type ID bundle_repeat )
    (16) constDecl -> . CONST val_type constDef constDecl_repeat ;
    (36) varDecl -> . val_type varDef varDef_repeat ;
    (57) cirDecl -> . cir_type cirDef cirDecl_repeat ;
    (39) modDecl -> . ID ( module_R_params ) ID array ;
    (49) bundleDecl -> . ID bundleDef bundleDecl_repeat
    (21) cir_type -> . cir_basic_type
    (22) cir_type -> . cir_basic_type [ exp ]
    (23) val_type -> . INT
    (24) val_type -> . FLOAT
    (17) cir_basic_type -> . REG
    (18) cir_basic_type -> . WIRE
    (19) cir_basic_type -> . CLOCK
    (20) cir_basic_type -> . ID

  ! shift/reduce conflict for MODULE resolved as shift
  ! shift/reduce conflict for BUNDLE resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for REG resolved as shift
  ! shift/reduce conflict for WIRE resolved as shift
  ! shift/reduce conflict for CLOCK resolved as shift
    $end            reduce using rule 1 (empty -> .)
    MODULE          shift and go to state 16
    BUNDLE          shift and go to state 17
    CONST           shift and go to state 18
    ID              shift and go to state 14
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    REG             shift and go to state 22
    WIRE            shift and go to state 23
    CLOCK           shift and go to state 24

  ! MODULE          [ reduce using rule 1 (empty -> .) ]
  ! BUNDLE          [ reduce using rule 1 (empty -> .) ]
  ! CONST           [ reduce using rule 1 (empty -> .) ]
  ! ID              [ reduce using rule 1 (empty -> .) ]
  ! INT             [ reduce using rule 1 (empty -> .) ]
  ! FLOAT           [ reduce using rule 1 (empty -> .) ]
  ! REG             [ reduce using rule 1 (empty -> .) ]
  ! WIRE            [ reduce using rule 1 (empty -> .) ]
  ! CLOCK           [ reduce using rule 1 (empty -> .) ]

    compUnit                       shift and go to state 1
    empty                          shift and go to state 2
    decl                           shift and go to state 3
    cir_function                   shift and go to state 4
    function                       shift and go to state 5
    module                         shift and go to state 6
    bundle                         shift and go to state 7
    constDecl                      shift and go to state 8
    varDecl                        shift and go to state 9
    cirDecl                        shift and go to state 10
    modDecl                        shift and go to state 11
    bundleDecl                     shift and go to state 12
    cir_type                       shift and go to state 13
    val_type                       shift and go to state 15
    cir_basic_type                 shift and go to state 19

state 1

    (0) S' -> compUnit .
    (3) compUnit -> compUnit . compUnit
    (2) compUnit -> . empty
    (3) compUnit -> . compUnit compUnit
    (4) compUnit -> . decl
    (5) compUnit -> . cir_function
    (6) compUnit -> . function
    (7) compUnit -> . module
    (8) compUnit -> . bundle
    (1) empty -> .
    (9) decl -> . constDecl
    (10) decl -> . varDecl
    (11) decl -> . cirDecl
    (12) decl -> . modDecl
    (13) decl -> . bundleDecl
    (60) cir_function -> . cir_type ID ( cir_funcFParams ) block
    (61) function -> . val_type ID ( funcFParams ) block
    (75) module -> . MODULE ID ( module_para_para port_def ID p_module_para_port ) block
    (78) bundle -> . BUNDLE ID ( cir_type ID bundle_repeat )
    (16) constDecl -> . CONST val_type constDef constDecl_repeat ;
    (36) varDecl -> . val_type varDef varDef_repeat ;
    (57) cirDecl -> . cir_type cirDef cirDecl_repeat ;
    (39) modDecl -> . ID ( module_R_params ) ID array ;
    (49) bundleDecl -> . ID bundleDef bundleDecl_repeat
    (21) cir_type -> . cir_basic_type
    (22) cir_type -> . cir_basic_type [ exp ]
    (23) val_type -> . INT
    (24) val_type -> . FLOAT
    (17) cir_basic_type -> . REG
    (18) cir_basic_type -> . WIRE
    (19) cir_basic_type -> . CLOCK
    (20) cir_basic_type -> . ID

  ! shift/reduce conflict for MODULE resolved as shift
  ! shift/reduce conflict for BUNDLE resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for REG resolved as shift
  ! shift/reduce conflict for WIRE resolved as shift
  ! shift/reduce conflict for CLOCK resolved as shift
    MODULE          shift and go to state 16
    BUNDLE          shift and go to state 17
    CONST           shift and go to state 18
    ID              shift and go to state 14
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    REG             shift and go to state 22
    WIRE            shift and go to state 23
    CLOCK           shift and go to state 24

  ! MODULE          [ reduce using rule 1 (empty -> .) ]
  ! BUNDLE          [ reduce using rule 1 (empty -> .) ]
  ! CONST           [ reduce using rule 1 (empty -> .) ]
  ! ID              [ reduce using rule 1 (empty -> .) ]
  ! INT             [ reduce using rule 1 (empty -> .) ]
  ! FLOAT           [ reduce using rule 1 (empty -> .) ]
  ! REG             [ reduce using rule 1 (empty -> .) ]
  ! WIRE            [ reduce using rule 1 (empty -> .) ]
  ! CLOCK           [ reduce using rule 1 (empty -> .) ]
  ! $end            [ reduce using rule 1 (empty -> .) ]

    compUnit                       shift and go to state 25
    empty                          shift and go to state 2
    decl                           shift and go to state 3
    cir_function                   shift and go to state 4
    function                       shift and go to state 5
    module                         shift and go to state 6
    bundle                         shift and go to state 7
    constDecl                      shift and go to state 8
    varDecl                        shift and go to state 9
    cirDecl                        shift and go to state 10
    modDecl                        shift and go to state 11
    bundleDecl                     shift and go to state 12
    cir_type                       shift and go to state 13
    val_type                       shift and go to state 15
    cir_basic_type                 shift and go to state 19

state 2

    (2) compUnit -> empty .

    MODULE          reduce using rule 2 (compUnit -> empty .)
    BUNDLE          reduce using rule 2 (compUnit -> empty .)
    CONST           reduce using rule 2 (compUnit -> empty .)
    ID              reduce using rule 2 (compUnit -> empty .)
    INT             reduce using rule 2 (compUnit -> empty .)
    FLOAT           reduce using rule 2 (compUnit -> empty .)
    REG             reduce using rule 2 (compUnit -> empty .)
    WIRE            reduce using rule 2 (compUnit -> empty .)
    CLOCK           reduce using rule 2 (compUnit -> empty .)
    $end            reduce using rule 2 (compUnit -> empty .)


state 3

    (4) compUnit -> decl .

    MODULE          reduce using rule 4 (compUnit -> decl .)
    BUNDLE          reduce using rule 4 (compUnit -> decl .)
    CONST           reduce using rule 4 (compUnit -> decl .)
    ID              reduce using rule 4 (compUnit -> decl .)
    INT             reduce using rule 4 (compUnit -> decl .)
    FLOAT           reduce using rule 4 (compUnit -> decl .)
    REG             reduce using rule 4 (compUnit -> decl .)
    WIRE            reduce using rule 4 (compUnit -> decl .)
    CLOCK           reduce using rule 4 (compUnit -> decl .)
    $end            reduce using rule 4 (compUnit -> decl .)


state 4

    (5) compUnit -> cir_function .

    MODULE          reduce using rule 5 (compUnit -> cir_function .)
    BUNDLE          reduce using rule 5 (compUnit -> cir_function .)
    CONST           reduce using rule 5 (compUnit -> cir_function .)
    ID              reduce using rule 5 (compUnit -> cir_function .)
    INT             reduce using rule 5 (compUnit -> cir_function .)
    FLOAT           reduce using rule 5 (compUnit -> cir_function .)
    REG             reduce using rule 5 (compUnit -> cir_function .)
    WIRE            reduce using rule 5 (compUnit -> cir_function .)
    CLOCK           reduce using rule 5 (compUnit -> cir_function .)
    $end            reduce using rule 5 (compUnit -> cir_function .)


state 5

    (6) compUnit -> function .

    MODULE          reduce using rule 6 (compUnit -> function .)
    BUNDLE          reduce using rule 6 (compUnit -> function .)
    CONST           reduce using rule 6 (compUnit -> function .)
    ID              reduce using rule 6 (compUnit -> function .)
    INT             reduce using rule 6 (compUnit -> function .)
    FLOAT           reduce using rule 6 (compUnit -> function .)
    REG             reduce using rule 6 (compUnit -> function .)
    WIRE            reduce using rule 6 (compUnit -> function .)
    CLOCK           reduce using rule 6 (compUnit -> function .)
    $end            reduce using rule 6 (compUnit -> function .)


state 6

    (7) compUnit -> module .

    MODULE          reduce using rule 7 (compUnit -> module .)
    BUNDLE          reduce using rule 7 (compUnit -> module .)
    CONST           reduce using rule 7 (compUnit -> module .)
    ID              reduce using rule 7 (compUnit -> module .)
    INT             reduce using rule 7 (compUnit -> module .)
    FLOAT           reduce using rule 7 (compUnit -> module .)
    REG             reduce using rule 7 (compUnit -> module .)
    WIRE            reduce using rule 7 (compUnit -> module .)
    CLOCK           reduce using rule 7 (compUnit -> module .)
    $end            reduce using rule 7 (compUnit -> module .)


state 7

    (8) compUnit -> bundle .

    MODULE          reduce using rule 8 (compUnit -> bundle .)
    BUNDLE          reduce using rule 8 (compUnit -> bundle .)
    CONST           reduce using rule 8 (compUnit -> bundle .)
    ID              reduce using rule 8 (compUnit -> bundle .)
    INT             reduce using rule 8 (compUnit -> bundle .)
    FLOAT           reduce using rule 8 (compUnit -> bundle .)
    REG             reduce using rule 8 (compUnit -> bundle .)
    WIRE            reduce using rule 8 (compUnit -> bundle .)
    CLOCK           reduce using rule 8 (compUnit -> bundle .)
    $end            reduce using rule 8 (compUnit -> bundle .)


state 8

    (9) decl -> constDecl .

    MODULE          reduce using rule 9 (decl -> constDecl .)
    BUNDLE          reduce using rule 9 (decl -> constDecl .)
    CONST           reduce using rule 9 (decl -> constDecl .)
    ID              reduce using rule 9 (decl -> constDecl .)
    INT             reduce using rule 9 (decl -> constDecl .)
    FLOAT           reduce using rule 9 (decl -> constDecl .)
    REG             reduce using rule 9 (decl -> constDecl .)
    WIRE            reduce using rule 9 (decl -> constDecl .)
    CLOCK           reduce using rule 9 (decl -> constDecl .)
    $end            reduce using rule 9 (decl -> constDecl .)
    ;               reduce using rule 9 (decl -> constDecl .)
    RETURN          reduce using rule 9 (decl -> constDecl .)
    {               reduce using rule 9 (decl -> constDecl .)
    MUX             reduce using rule 9 (decl -> constDecl .)
    WHEN            reduce using rule 9 (decl -> constDecl .)
    IF              reduce using rule 9 (decl -> constDecl .)
    FOR             reduce using rule 9 (decl -> constDecl .)
    GENERATE        reduce using rule 9 (decl -> constDecl .)
    AND             reduce using rule 9 (decl -> constDecl .)
    OR              reduce using rule 9 (decl -> constDecl .)
    NOT             reduce using rule 9 (decl -> constDecl .)
    XOR             reduce using rule 9 (decl -> constDecl .)
    XNOR            reduce using rule 9 (decl -> constDecl .)
    SIGNAL          reduce using rule 9 (decl -> constDecl .)
    (               reduce using rule 9 (decl -> constDecl .)
    ADD             reduce using rule 9 (decl -> constDecl .)
    SUB             reduce using rule 9 (decl -> constDecl .)
    NOTL            reduce using rule 9 (decl -> constDecl .)
    INTEGER_CONST   reduce using rule 9 (decl -> constDecl .)
    FLOAT_CONST     reduce using rule 9 (decl -> constDecl .)
    }               reduce using rule 9 (decl -> constDecl .)


state 9

    (10) decl -> varDecl .

    MODULE          reduce using rule 10 (decl -> varDecl .)
    BUNDLE          reduce using rule 10 (decl -> varDecl .)
    CONST           reduce using rule 10 (decl -> varDecl .)
    ID              reduce using rule 10 (decl -> varDecl .)
    INT             reduce using rule 10 (decl -> varDecl .)
    FLOAT           reduce using rule 10 (decl -> varDecl .)
    REG             reduce using rule 10 (decl -> varDecl .)
    WIRE            reduce using rule 10 (decl -> varDecl .)
    CLOCK           reduce using rule 10 (decl -> varDecl .)
    $end            reduce using rule 10 (decl -> varDecl .)
    ;               reduce using rule 10 (decl -> varDecl .)
    RETURN          reduce using rule 10 (decl -> varDecl .)
    {               reduce using rule 10 (decl -> varDecl .)
    MUX             reduce using rule 10 (decl -> varDecl .)
    WHEN            reduce using rule 10 (decl -> varDecl .)
    IF              reduce using rule 10 (decl -> varDecl .)
    FOR             reduce using rule 10 (decl -> varDecl .)
    GENERATE        reduce using rule 10 (decl -> varDecl .)
    AND             reduce using rule 10 (decl -> varDecl .)
    OR              reduce using rule 10 (decl -> varDecl .)
    NOT             reduce using rule 10 (decl -> varDecl .)
    XOR             reduce using rule 10 (decl -> varDecl .)
    XNOR            reduce using rule 10 (decl -> varDecl .)
    SIGNAL          reduce using rule 10 (decl -> varDecl .)
    (               reduce using rule 10 (decl -> varDecl .)
    ADD             reduce using rule 10 (decl -> varDecl .)
    SUB             reduce using rule 10 (decl -> varDecl .)
    NOTL            reduce using rule 10 (decl -> varDecl .)
    INTEGER_CONST   reduce using rule 10 (decl -> varDecl .)
    FLOAT_CONST     reduce using rule 10 (decl -> varDecl .)
    }               reduce using rule 10 (decl -> varDecl .)


state 10

    (11) decl -> cirDecl .

    MODULE          reduce using rule 11 (decl -> cirDecl .)
    BUNDLE          reduce using rule 11 (decl -> cirDecl .)
    CONST           reduce using rule 11 (decl -> cirDecl .)
    ID              reduce using rule 11 (decl -> cirDecl .)
    INT             reduce using rule 11 (decl -> cirDecl .)
    FLOAT           reduce using rule 11 (decl -> cirDecl .)
    REG             reduce using rule 11 (decl -> cirDecl .)
    WIRE            reduce using rule 11 (decl -> cirDecl .)
    CLOCK           reduce using rule 11 (decl -> cirDecl .)
    $end            reduce using rule 11 (decl -> cirDecl .)
    ;               reduce using rule 11 (decl -> cirDecl .)
    RETURN          reduce using rule 11 (decl -> cirDecl .)
    {               reduce using rule 11 (decl -> cirDecl .)
    MUX             reduce using rule 11 (decl -> cirDecl .)
    WHEN            reduce using rule 11 (decl -> cirDecl .)
    IF              reduce using rule 11 (decl -> cirDecl .)
    FOR             reduce using rule 11 (decl -> cirDecl .)
    GENERATE        reduce using rule 11 (decl -> cirDecl .)
    AND             reduce using rule 11 (decl -> cirDecl .)
    OR              reduce using rule 11 (decl -> cirDecl .)
    NOT             reduce using rule 11 (decl -> cirDecl .)
    XOR             reduce using rule 11 (decl -> cirDecl .)
    XNOR            reduce using rule 11 (decl -> cirDecl .)
    SIGNAL          reduce using rule 11 (decl -> cirDecl .)
    (               reduce using rule 11 (decl -> cirDecl .)
    ADD             reduce using rule 11 (decl -> cirDecl .)
    SUB             reduce using rule 11 (decl -> cirDecl .)
    NOTL            reduce using rule 11 (decl -> cirDecl .)
    INTEGER_CONST   reduce using rule 11 (decl -> cirDecl .)
    FLOAT_CONST     reduce using rule 11 (decl -> cirDecl .)
    }               reduce using rule 11 (decl -> cirDecl .)


state 11

    (12) decl -> modDecl .

    MODULE          reduce using rule 12 (decl -> modDecl .)
    BUNDLE          reduce using rule 12 (decl -> modDecl .)
    CONST           reduce using rule 12 (decl -> modDecl .)
    ID              reduce using rule 12 (decl -> modDecl .)
    INT             reduce using rule 12 (decl -> modDecl .)
    FLOAT           reduce using rule 12 (decl -> modDecl .)
    REG             reduce using rule 12 (decl -> modDecl .)
    WIRE            reduce using rule 12 (decl -> modDecl .)
    CLOCK           reduce using rule 12 (decl -> modDecl .)
    $end            reduce using rule 12 (decl -> modDecl .)
    ;               reduce using rule 12 (decl -> modDecl .)
    RETURN          reduce using rule 12 (decl -> modDecl .)
    {               reduce using rule 12 (decl -> modDecl .)
    MUX             reduce using rule 12 (decl -> modDecl .)
    WHEN            reduce using rule 12 (decl -> modDecl .)
    IF              reduce using rule 12 (decl -> modDecl .)
    FOR             reduce using rule 12 (decl -> modDecl .)
    GENERATE        reduce using rule 12 (decl -> modDecl .)
    AND             reduce using rule 12 (decl -> modDecl .)
    OR              reduce using rule 12 (decl -> modDecl .)
    NOT             reduce using rule 12 (decl -> modDecl .)
    XOR             reduce using rule 12 (decl -> modDecl .)
    XNOR            reduce using rule 12 (decl -> modDecl .)
    SIGNAL          reduce using rule 12 (decl -> modDecl .)
    (               reduce using rule 12 (decl -> modDecl .)
    ADD             reduce using rule 12 (decl -> modDecl .)
    SUB             reduce using rule 12 (decl -> modDecl .)
    NOTL            reduce using rule 12 (decl -> modDecl .)
    INTEGER_CONST   reduce using rule 12 (decl -> modDecl .)
    FLOAT_CONST     reduce using rule 12 (decl -> modDecl .)
    }               reduce using rule 12 (decl -> modDecl .)


state 12

    (13) decl -> bundleDecl .

    MODULE          reduce using rule 13 (decl -> bundleDecl .)
    BUNDLE          reduce using rule 13 (decl -> bundleDecl .)
    CONST           reduce using rule 13 (decl -> bundleDecl .)
    ID              reduce using rule 13 (decl -> bundleDecl .)
    INT             reduce using rule 13 (decl -> bundleDecl .)
    FLOAT           reduce using rule 13 (decl -> bundleDecl .)
    REG             reduce using rule 13 (decl -> bundleDecl .)
    WIRE            reduce using rule 13 (decl -> bundleDecl .)
    CLOCK           reduce using rule 13 (decl -> bundleDecl .)
    $end            reduce using rule 13 (decl -> bundleDecl .)
    ;               reduce using rule 13 (decl -> bundleDecl .)
    RETURN          reduce using rule 13 (decl -> bundleDecl .)
    {               reduce using rule 13 (decl -> bundleDecl .)
    MUX             reduce using rule 13 (decl -> bundleDecl .)
    WHEN            reduce using rule 13 (decl -> bundleDecl .)
    IF              reduce using rule 13 (decl -> bundleDecl .)
    FOR             reduce using rule 13 (decl -> bundleDecl .)
    GENERATE        reduce using rule 13 (decl -> bundleDecl .)
    AND             reduce using rule 13 (decl -> bundleDecl .)
    OR              reduce using rule 13 (decl -> bundleDecl .)
    NOT             reduce using rule 13 (decl -> bundleDecl .)
    XOR             reduce using rule 13 (decl -> bundleDecl .)
    XNOR            reduce using rule 13 (decl -> bundleDecl .)
    SIGNAL          reduce using rule 13 (decl -> bundleDecl .)
    (               reduce using rule 13 (decl -> bundleDecl .)
    ADD             reduce using rule 13 (decl -> bundleDecl .)
    SUB             reduce using rule 13 (decl -> bundleDecl .)
    NOTL            reduce using rule 13 (decl -> bundleDecl .)
    INTEGER_CONST   reduce using rule 13 (decl -> bundleDecl .)
    FLOAT_CONST     reduce using rule 13 (decl -> bundleDecl .)
    }               reduce using rule 13 (decl -> bundleDecl .)


state 13

    (60) cir_function -> cir_type . ID ( cir_funcFParams ) block
    (57) cirDecl -> cir_type . cirDef cirDecl_repeat ;
    (58) cirDef -> . ID array
    (59) cirDef -> . ID array ASSIGN initVal

    ID              shift and go to state 26

    cirDef                         shift and go to state 27

state 14

    (39) modDecl -> ID . ( module_R_params ) ID array ;
    (49) bundleDecl -> ID . bundleDef bundleDecl_repeat
    (20) cir_basic_type -> ID .
    (50) bundleDef -> . ID array
